# Hera-Robot

./: .gitignore  LICENSE  README.md  run_hera.sh
hera_ws/src/hera_robot/: package.xml  setup.cfg  setup.py
hera_ws/src/hera_robot/hera_robot/: transcribeClient.py  transcribeService.py  transcribeServiceModelSmall.py
hera_ws/src/hera_speech/: package.xml  setup.cfg  setup.py
hera_ws/src/hera_speech/hera_speech/: hear.py  hear_node.py  speak.py  speak_node.py
hera_ws/src/my_robot_controller/: package.xml  setup.py
hera_ws/src/my_robot_controller/my_robot_controller/: my_first_node.py  transcribe.py  transcribeClient.py  transcribeService.py
hera_ws/src/vosk_speech/: package.xml  setup.cfg  setup.py
hera_ws/src/vosk_speech/utilitarios/: showMicrophones.py
hera_ws/src/vosk_speech/vosk_speech/: hear.py  transcribeService.py  transcribeServiceModelSmall.py
