<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hera_robot</name>
  <version>0.1.0</version>
  <description>Pacote ROS 2 em Python para o robô Hera, incluindo nós de publicação, assinatura e serviços de transcrição.</description>
  <maintainer email="hello-nobre@outlook.com">lauanda</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>python3-vosk</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
